2nd training/Community/Community/Community1/force-app/main/default/objects/Shipping_Detail__c/Shipping_Detail__c.object-meta.xml
<CustomObject>
    <label>Shipping Detail</label>
    <nameField>
        <displayFormat>SD{YY}{MM}{DD}-{00000}</displayFormat>
        <label>Shipping Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipping Details</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>