2nd training/Community/Community/Community1/force-app/main/default/objects/Shipping_Detail__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client/Shipper</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Shipping Details (Client/Shipper)</relationshipLabel>
    <relationshipName>Shipping_Details1</relationshipName>
    <type>Lookup</type>
</CustomField>