2nd training/Community/Community/Community1/force-app/main/default/objects/Shipping_Detail__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Shipping Details</relationshipLabel>
    <relationshipName>Shipping_Details</relationshipName>
    <type>Lookup</type>
</CustomField>