2nd training/Community/Community/Community1/force-app/main/default/objects/Shipping_Detail__c/fields/Invoiced_Amount__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_Amount__c</fullName>
    <label>Invoiced Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>