2nd training/Community/Community/Community1/force-app/main/default/objects/Shipping_Detail__c/fields/Mode_of_Transport__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_Transport__c</fullName>
    <label>Mode of Shipment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Air</fullName>
            </value>
            <value>
                <fullName>Sea</fullName>
            </value>
            <value>
                <fullName>Land</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>