2nd training/Community/Community/Community1/force-app/main/default/objects/Shipping_Detail__c/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <label>Origin</label>
    <length>20</length>
    <type>Text</type>
</CustomField>