2nd training/Community/Community/Community1/force-app/main/default/objects/Shipping_Detail__c/fields/Vol_Weight__c.field-meta.xml
<CustomField>
    <fullName>Vol_Weight__c</fullName>
    <label>Chargeable Weight (kg)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>